--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Hello World!</h1>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt labore odio, commodi consectetur corrupti ipsum asperiores, consequuntur suscipit obcaecati delectus blanditiis praesentium omnis. Ullam fuga praesentium est quis fugit perferendis.</p>
 </body>
 </html>
